Se modificaron las variables de entorno para su mejor utilizacion y entendimiento

--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,7 @@
 PORT=
-MYSQLDATABASE=
-MYSQLUSER=
-MYSQLPASSWORD=
-MYSQLHOST=
-MYSQLPORT=
-MYSQL_URL=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DIALECT=
