--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.6",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
