--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "googleapis": "^126.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "puppeteer": "^21.3.8",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
